--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
   <h5>
     <p style="color:rgb(255, 255, 255);"> ACCOUNT NO.:  8025927304 </p>
      ACCOUNT NAME:  Idris Ismail Abdulladif              BANK NAME:  Moniepoint MFB
-    <p>CDCFIB HR Consultancy Clearance for a Replacement Job </p>
+    <p>NFSS HR Consultancy Clearance for a Replacement Job </p>
   </h5>
 </p>
 
